# interview

./: README.md  doc.txt  docker-compose.yml  package-lock.json
backend/: .env.local.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0def4856abba_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py  dashboard.py  orders.py  products.py
backend/app/core/: config.py  database.py  logger.py
backend/app/models/: __init__.py  customer.py  order.py  order_item.py  product.py
backend/app/schemas/: customer.py  dashboard.py  order.py  product.py
backend/app/services/: customer_service.py  order_service.py  product_service.py
public/: index.html
src/: App.js  App.test.js  index.css  proxy-server.js  store.js
src/Component/: Filters.jsx  Navbar.jsx  Pagination.jsx  ProductDetails.jsx  ProductList.jsx  SearchBar.jsx  Sort.jsx
src/Data/: productsData.js
src/Pages/: DetailsPage.js  Error.js  Homepage.js
src/Redux/Reducer/: productSlice.js
